<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.DashboardFragment">

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/welcome_text"
                style="@style/TextAppearance.MaterialComponents.Headline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/desc_welcome_home"
                android:textSize="32sp" />

            <RelativeLayout
                android:id="@+id/heater_status_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcome_text"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp">

                <TextView
                    android:id="@+id/heater_status_text"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toStartOf="@id/heater_status"
                    android:layout_toLeftOf="@id/heater_status"
                    android:drawableStart="@drawable/ic_radiator_on_24"
                    android:drawableLeft="@drawable/ic_radiator_on_24"
                    android:drawablePadding="16dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/desc_heater_status"
                    app:fontFamily="@font/google_sans" />

                <TextView
                    android:id="@+id/heater_status"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    app:fontFamily="@font/google_sans"
                    tools:text="@string/state_on_auto" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.design.card.MaterialCardView>

</RelativeLayout>